--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PDF分割 & 連番リネーム</title>
+  <title>PDF分割 & 連番リネームサイト</title>
   <style>
     :root { --bg:#0b1020; --card:#121834; --muted:#9fb0ff; --accent:#6aa9ff; --text:#e9ecff; }
     *{box-sizing:border-box}
