--- a/index.html
+++ b/index.html
@@ -441,5 +441,6 @@
       csvChart = new Chart(csvChartCanvas, cfg);
     });
   </script>
+  <a class="btn" href="math.html" target="_blank" rel="noopener">数式描画（LaTeX）</a>
 </body>
 </html>
